<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="10dp"
            android:text="@string/label"
            app:layout_constraintBottom_toTopOf="@+id/labelEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/labelEditText"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="75dp"
            android:ems="10"
            android:hint="@string/enter_name"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="10dp"
            android:text="@string/amount"
            app:layout_constraintBottom_toTopOf="@+id/amountEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/enter_amount"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelEditText" />

        <TextView
            android:id="@+id/frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="10dp"
            android:text="@string/frequency"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="90dp"
            android:layout_height="95dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountEditText">

            <RadioButton
                android:id="@+id/onceRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/once" />

            <RadioButton
                android:id="@+id/everyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/every" />

        </RadioGroup>

        <Spinner
            android:id="@+id/timeDropDown"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="97dp"
            android:entries="@array/time_units"
            app:layout_constraintStart_toEndOf="@+id/numberDropDown"
            app:layout_constraintTop_toBottomOf="@+id/amountEditText" />

        <Spinner
            android:id="@+id/numberDropDown"
            android:layout_width="85dp"
            android:layout_height="48dp"
            android:layout_marginTop="97dp"
            android:entries="@array/numbers"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/amountEditText" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="10dp"
            android:text="@string/date"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <RadioButton
                android:id="@+id/dateToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_today" />

            <RadioButton
                android:id="@+id/dateSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_select" />

            <CalendarView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>