<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BudgetingActivity">


    <ProgressBar
        android:theme="@style/SavingLimitBar"
        android:id="@+id/current_saving_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:theme="@style/SetLimitBar"
        android:id="@+id/current_limit_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_saving_bar" />

    <Button
        android:id="@+id/saving_button"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="75dp"
        android:text="@string/savings"
        android:background="@drawable/round_button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_limit_bar" />

    <Button
        android:id="@+id/set_limit_button"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="50dp"
        android:text="@string/set_limit"
        android:background="@drawable/round_button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saving_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="15dp"
        android:text="@string/current_savings"
        app:layout_constraintBottom_toTopOf="@+id/current_saving_bar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="15dp"
        android:text="@string/current_limit"
        app:layout_constraintBottom_toTopOf="@+id/current_limit_bar"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>