<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonthlyStatementInformationActivity">

    <ProgressBar
        android:id="@+id/limitProgressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingsProgressBar2" />

    <TextView
        android:id="@+id/currentSavings2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="15dp"
        android:text="@string/current_savings"
        app:layout_constraintBottom_toTopOf="@+id/savingsProgressBar2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/monthYearText"
        android:layout_width="325dp"
        android:layout_height="24dp"
        android:layout_marginBottom="12dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/currentBalance2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/savingsProgressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentLimit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="15dp"
        android:text="@string/current_limit"
        app:layout_constraintBottom_toTopOf="@+id/limitProgressBar2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/currentBalance2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="100dp"
        android:text="@string/current_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/balanceStmtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="43dp"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limitProgressBar2">

    </LinearLayout>

    <TextView
        android:id="@+id/savingsPerc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="15dp"
        android:text="@string/percent_zero"
        app:layout_constraintBottom_toTopOf="@+id/savingsProgressBar2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/setLimitPerc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="15dp"
        android:text="@string/percent_zero"
        app:layout_constraintBottom_toTopOf="@+id/limitProgressBar2"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>